fix the page's height on ios

--- a/scss/base/_overrides.scss
+++ b/scss/base/_overrides.scss
@@ -1,3 +1,7 @@
 .pane {
     background-color: $gray-lighter;
 }
+
+.scroll {
+    height: 100%;
+}
